# relation-coding

./: LICENSE  README.md  pyproject.toml
src/relcode/: __init__.py  relation_decoding.py  relation_encoding.py
