[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relcode"
version = "0.1.0"
description = "Encode and decode binary relations for dot-product self-attention."
readme="README.md"
dependencies = [
    "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
